--- a/templates/index/index-navbar-lg.html.twig
+++ b/templates/index/index-navbar-lg.html.twig
@@ -1,33 +1,29 @@
-{# templates/index-navbar-lg.html.twig #}
+<nav class="navbar navbar-expand-lg">
 
-{# Affichage de la navbar lg #}
-
-<nav class="navbar navbar-expand-lg ">
     <div class="container-fluid">
+
         <a class="navbar-brand" href="/">WhatsApp-Like 📞</a>
+
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Menu</a>
-                    <ul class="dropdown-menu">
-                        {% if is_granted('ROLE_ADMIN') or is_granted('ROLE_PRIVILEGED') %}
-                            <li><a class="dropdown-item" href="{{ path('creationCommissionTemporaire') }}">Créer commission</a></li>
-                            <li><a class="dropdown-item" href="#">Modifier commission</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                        {% endif %}
-                        {% if is_granted('ROLE_ADMIN') %}
-                            <li><a class="dropdown-item" href="{{ path('admin') }}">Pannel d'administration</a></li>
-                        {% endif %}
-                        <li><a class="dropdown-item" href="{{ path('gestionNotifications') }}">Désactiver notifications</a></li>
-                    </ul>
-                </li>
-            </ul>
-            <form class="d-flex" action="{{ path('app_logout') }}" method="post">
-                <button type="submit" class="btn btn-danger ">Se déconnecter</button>
-            </form>
+
+        <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarSupportedContent">
+
+            <div class="d-flex align-items-center">
+                {% if is_granted('ROLE_ADMIN') %}
+                    <!-- Bouton admin avec marge à droite -->
+                    <a class="btn btn-primary ms-2" href="{{ path('admin') }}">Pannel d'administration</a>
+                {% endif %}
+
+                <form class="d-flex ms-2" action="{{ path('app_logout') }}" method="post">
+                    <button type="submit" class="btn btn-danger">Se déconnecter</button>
+                </form>
+
+            </div>
+
         </div>
+
     </div>
+
 </nav>
